Create-XR3-Network-Architecture.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Template to Create the XR3 Engine Network Architecture

Parameters:
  VPCBlock:
    Type: String
    Description: The CIDR Block for the VPC
    Default: 192.168.0.0/16

  PrivateSubnet01Block:
    Type: String
    Description: The CIDR Block for the private subnet 01
    Default: 192.168.1.0/26

  PrivateSubnet02Block:
    Type: String
    Description: The CIDR Block for the private subnet 02
    Default: 192.168.1.64/26

  PrivateSubnet03Block:
    Type: String
    Description: The CIDR Block for the private subnet 03
    Default: 192.168.1.128/26

  PrivateSubnet04Block:
    Type: String
    Description: The CIDR Block for the private subnet 04
    Default: 192.168.1.192/26

  PublicSubnet01Block:
    Type: String
    Description: The CIDR Block for the public subnet 01
    Default: 192.168.0.0/28

  PublicSubnet02Block:
    Type: String
    Description: The CIDR Block for the public subnet 02
    Default: 192.168.0.16/28

  EnvironmentName:
    Type: String
    Description: The Environment you are launching services in (Prod/UAT)

  CreatedBy:
    Type: String
    Description: The Identity of the Person Creating the Environment

  ProjectName:
    Type: String
    Description: The Company Project Name
  
  VPCName:
    Type: String
    Description: The name of the VPC

  IGWName:
    Type: String
    Description: The name of the Internet Gateway

  NGW01Name:
    Type: String
    Description: The name of the 1st NatGateway

  NGW02Name:
    Type: String
    Description: The name of the 2nd Natgateway

  PublicRTBName:
    Type: String
    Description: The name of the public route table

  PrivateRTB01Name:
    Type: String
    Description: The name of the private route table 01

  PrivateRTB02Name:
    Type: String
    Description: The name of the private route table 02

  PrivateSub01Name:
    Type: String
    Description: The name of private subnet 01

  PrivateSub02Name:
    Type: String
    Description: The name of private subnet 02

  PrivateSub03Name:
    Type: String
    Description: The name of private subnet 03

  PrivateSub04Name:
    Type: String
    Description: The name of private subnet 04

  PublicSub01Name:
    Type: String
    Description: The name of public subnet 01

  PublicSub02Name:
    Type: String
    Description: The name of public subnet 02

  AZ1Name:
    Type: String
    Description: The name of Availability Zone 1 e.g (us-west-1a)

  AZ2Name:
    Type: String
    Description: The name of Availability Zone 2 e.g (us-west-1b)
  
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: !Ref VPCBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: !Ref VPCName
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  IGW: 
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: !Ref IGWName
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName 

  NatGateway01:
    DependsOn:
    - NatGatewayEIP01
    - PublicSubnet01
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP01.AllocationId'
      SubnetId: !Ref PublicSubnet01
      Tags:
        - Key: Name
          Value: !Ref NGW01Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  NatGateway02:
    DependsOn:
    - NatGatewayEIP02
    - PublicSubnet02
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP02.AllocationId'
      SubnetId: !Ref PublicSubnet02
      Tags:
        - Key: Name
          Value: !Ref NGW02Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  NatGatewayEIP01:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGatewayEIP02:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PublicRTBName
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName 

  PrivateRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateRTB01Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName 

  PrivateRouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateRTB02Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  PrivateRoute01:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway01
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01

  PrivateRoute02:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway02
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02

  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AZ1Name
      CidrBlock: !Ref PrivateSubnet01Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateSub01Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName 

  PrivateSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AZ2Name
      CidrBlock: !Ref PrivateSubnet02Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateSub02Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  PrivateSubnet03:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AZ1Name
      CidrBlock: !Ref PrivateSubnet03Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateSub03Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName 

  PrivateSubnet04:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AZ2Name
      CidrBlock: !Ref PrivateSubnet04Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateSub04Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName 

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Ref AZ1Name
      CidrBlock: !Ref PublicSubnet01Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PublicSub01Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Ref AZ2Name
      CidrBlock: !Ref PublicSubnet02Block
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PublicSub02Name
        - Key: createdBy
          Value: !Ref CreatedBy
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable01

  PrivateSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref PrivateRouteTable02

  PrivateSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet03
      RouteTableId: !Ref PrivateRouteTable01

  PrivateSubnet04RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet04
      RouteTableId: !Ref PrivateRouteTable02
      
Outputs:
  PublicSubnet01Id:
    Description: Public Subnet 01 ID in the VPC
    Value: !Ref PublicSubnet01
    Export: 
      Name: XR3-PublicSubnet01Id

  PublicSubnet02Id:
    Description: Public Subnet 02 ID in the VPC
    Value: !Ref PublicSubnet02
    Export: 
      Name: XR3-PublicSubnet02Id

  PrivateSubne01tId:
    Description: Private Subnet 01 ID in the VPC
    Value: !Ref PrivateSubnet01
    Export: 
      Name: XR3-PrivateSubnet01Id

  PrivateSubne02tId:
    Description: Private Subnet 02 ID in the VPC
    Value: !Ref PrivateSubnet02
    Export: 
      Name: XR3-PrivateSubnet02Id

  PrivateSubne03tId:
    Description: Private Subnet 03 ID in the VPC
    Value: !Ref PrivateSubnet03
    Export: 
      Name: XR3-PrivateSubnet03Id

  PrivateSubne04tId:
    Description: Private Subnet IDs in the VPC
    Value: !Ref PrivateSubnet04
    Export: 
      Name: XR3-PrivateSubnet04Id

  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
    Export: 
      Name: XR3-VPCID
